Fix the side bar extra spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2976,7 +2976,7 @@ input, select, textarea {
 				overflow-y: auto;
 				position: fixed;
 				top: 0;
-				width: 25em;
+				width: 23em;
 				z-index: 10002;
 				-moz-transform: translateX(23em);
 				-webkit-transform: translateX(23em);
